--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,5 +48,8 @@
     "husky": "^9.1.4",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7"
+  },
+  "hooks": {
+    "pre-commit": "npm run format"
   }
 }
