--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,14 +42,17 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.4",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7"
-  },
-  "hooks": {
-    "pre-commit": "npm run format"
   }
 }
