--- a/Idol_Crawling/build.gradle
+++ b/Idol_Crawling/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 
 	// jsoup
 	implementation 'org.jsoup:jsoup:1.15.3'
+
+	// jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
