--- a/Idol_Crawling/src/main/resources/application.yml
+++ b/Idol_Crawling/src/main/resources/application.yml
@@ -4,3 +4,12 @@ spring:
   # .env
   config:
     import: optional:file:.env[.properties]
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DATASOURCE_URL}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
+  sql:
+    init:
+      mode: always
