--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,20 @@
+# nginx 이미지를 기반으로 생성
 FROM nginx
 
-# root 에 app 폴더를 생성
-RUN mkdir /app
-
-# work dir 고정
+# 작업 디렉토리를 /app으로 설정
 WORKDIR /app
 
-# work dir 에 build 폴더 생성 /app/build
-RUN mkdir ./build
-
-# host pc의 현재경로의 build 폴더를 workdir 의 build 폴더로 복사
+# 현재 디렉토리의 build 폴더를 /app/build로 복사
 ADD ./build ./build
 
-# nginx 의 default.conf 를 삭제
+# 기본 nginx 설정 파일 삭제
 RUN rm /etc/nginx/conf.d/default.conf
 
-# host pc 의 nginx.conf 를 아래 경로에 복사
+# 로컬의 nginx.conf 파일을 nginx 설정 경로로 복사
 COPY ./nginx.conf /etc/nginx/conf.d
 
 # 80 포트 오픈
 EXPOSE 80
 
-# container 실행 시 자동으로 실행할 command. nginx 시작함
+# 컨테이너 실행 시 nginx를 포그라운드 모드로 실행
 CMD ["nginx", "-g", "daemon off;"]
