--- a/Similarity_Analyze/Dockerfile
+++ b/Similarity_Analyze/Dockerfile
@@ -1,6 +1,11 @@
 # Python 베이스 이미지 사용
 FROM python:3.9-slim
 
+# 필요한 라이브러리 설치
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0
+
 # 작업 디렉토리 설정
 WORKDIR /app
 
