--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "^18.3.0",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
@@ -52,6 +54,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/aos": "^3.0.7",
+    "@types/react-lottie": "^1.2.10",
     "@types/react-slick": "^0.23.13",
     "@types/sockjs-client": "^1.5.4",
     "eslint": "^8.57.0",
