--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
